fix scrollbar in admin home page

--- a/pawtechnx/admin_page/admin_home_style.css
+++ b/pawtechnx/admin_page/admin_home_style.css
@@ -4,7 +4,8 @@ body {
   height: 100vh;
   font-size: 0.88rem;
   user-select: none;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-x: auto;
   background-color: #f4f4f4;
 }
 
